--- a/app/views/accountancy/journal_entry.html.haml
+++ b/app/views/accountancy/journal_entry.html.haml
@@ -13,4 +13,4 @@
   -l.attribute :credit
 
 %h2=JournalEntry.human_attribute_name("lines")
-=kame(:journal_entry_entries)
+=kame(:journal_entry_lines)
