--- a/app/views/accountancy/balance.html.haml
+++ b/app/views/accountancy/balance.html.haml
@@ -41,30 +41,30 @@
         %tr{:class=>cycle(:odd, :even)}
           %td.code=link_to(account.number, :action=>:account, :id=>account.id)
           %td=link_to(account.name, :action=>:account, :id=>account.id)
-          %td.decimal=number_bookkeep(line[2])
-          %td.decimal=number_bookkeep(line[3])
-          %td.decimal=number_bookkeep(line[4]) if line[4].to_f > 0
-          %td.decimal=number_bookkeep(-line[4].to_f) if line[4].to_f < 0
+          %td.dec=number_to_accountancy(line[2])
+          %td.dec=number_to_accountancy(line[3])
+          %td.dec=number_to_accountancy(line[4]) if line[4].to_f > 0
+          %td.dec=number_to_accountancy(-line[4].to_f) if line[4].to_f < 0
       -elsif line[1].to_i == -1
         %tr.total
           %th{:colspan=>2}=tg(:total)
-          %td.decimal=number_bookkeep(line[2])
-          %td.decimal=number_bookkeep(line[3])
-          %td.decimal=number_bookkeep(line[4]) if line[4].to_f > 0
-          %td.decimal=number_bookkeep(-line[4].to_f) if line[4].to_f < 0
+          %td.dec=number_to_accountancy(line[2])
+          %td.dec=number_to_accountancy(line[3])
+          %td.dec=number_to_accountancy(line[4]) if line[4].to_f > 0
+          %td.dec=number_to_accountancy(-line[4].to_f) if line[4].to_f < 0
       -elsif line[1].to_i == -2
         %tr.subtotal
-          %th{:colspan=>2, :style=>"padding-left: #{d*8+4}px"}=tc(:subtotal, :name=>line[0])
-          %td.decimal=number_bookkeep(line[2])
-          %td.decimal=number_bookkeep(line[3])
-          %td.decimal=number_bookkeep(line[4]) if line[4].to_f > 0
-          %td.decimal=number_bookkeep(-line[4].to_f) if line[4].to_f < 0
+          %td{:colspan=>2, :style=>"padding-left: #{d*8+4}px"}=tc(:subtotal, :name=>line[0])
+          %td.dec=number_to_accountancy(line[2])
+          %td.dec=number_to_accountancy(line[3])
+          %td.dec=number_to_accountancy(line[4]) if line[4].to_f > 0
+          %td.dec=number_to_accountancy(-line[4].to_f) if line[4].to_f < 0
       -elsif line[1].to_i == -3
         %tr.centralize{:class=>cycle(:odd, :even)}
           %td=line[0]
           %td=tc(:centralized_account, :name=>line[0])
-          %td.decimal=number_bookkeep(line[2])
-          %td.decimal=number_bookkeep(line[3])
-          %td.decimal=number_bookkeep(line[4]) if line[4].to_f > 0
-          %td.decimal=number_bookkeep(-line[4].to_f) if line[4].to_f < 0
+          %td.dec=number_to_accountancy(line[2])
+          %td.dec=number_to_accountancy(line[3])
+          %td.dec=number_to_accountancy(line[4]) if line[4].to_f > 0
+          %td.dec=number_to_accountancy(-line[4].to_f) if line[4].to_f < 0
 .end
