--- a/app/views/accountancy/journal.html.haml
+++ b/app/views/accountancy/journal.html.haml
@@ -16,8 +16,8 @@
     %table
       %tr
         %td.crit
-          %label{:for=>"journal_entry_key"}=tc(:search)
-          =text_field_tag("journal_entry_key", params[:journal_entry_key])
+          %label{:for=>"search"}=tc(:search)
+          =text_field_tag("q", params[:q], :id=>:search)
         %td.submit{:rowspan=>4}=submit_tag tg(:search_go), :name=>nil
       %tr
         %td.crit=journal_entries_states_crit
@@ -27,6 +27,14 @@
 =journal_view_tag
 .tab-content=kame("journal_#{@journal_view}")
 
+
+-conditions = eval(controller.class.journal_entries_conditions)
+-totals = {}
+-totals[:debit]  = JournalEntry.sum(:debit, :conditions=>conditions)
+-totals[:credit] = JournalEntry.sum(:credit, :conditions=>conditions)
+-totals[:balance_debit] = totals[:balance_credit] = 0.0
+-totals["balance_#{totals[:debit]>totals[:credit] ? 'debit' : 'credit'}".to_sym] = (totals[:debit]-totals[:credit]).abs
+
 %table.kame
   %tr.total
     %th
@@ -34,9 +42,9 @@
     %th=JournalEntry.human_attribute_name("credit")
   %tr.important.total
     %th=tc :totals
-    %td=number_bookkeep @totals[:debit]
-    %td=number_bookkeep @totals[:credit]
+    %td=number_to_accountancy totals[:debit]
+    %td=number_to_accountancy totals[:credit]
   %tr.important.total
     %th=tc :balance
-    %td=number_bookkeep @totals[:balance_debit]
-    %td=number_bookkeep @totals[:balance_credit]
+    %td=number_to_accountancy totals[:balance_debit]
+    %td=number_to_accountancy totals[:balance_credit]
