Fixes reconciliating for purchases
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1698 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_account_form.html.haml
+++ b/app/views/accountancy/_account_form.html.haml
@@ -6,4 +6,5 @@
     -else
       -f.field Account.human_attribute_name("number"), @account.number
     -f.field :account, :name
+    -f.field :account, :reconcilable
     -f.field :account, :comment, :field=>:textarea
