--- a/public/themes/tekyla/stylesheets/print.css
+++ b/public/themes/tekyla/stylesheets/print.css
@@ -1,4 +1,4 @@
-* { padding: 0; margin:0; font-size:10pt; font-family: Arial, sans-serif;}
+* { padding: 0; margin:0; font-size:10pt; font-family: "Liberation Sans", sans-serif;}
 
 h1 { font-size: 16pt; font-weight: normal; border-bottom: 0.1mm solid black; margin-bottom: 2mm;}
 
