--- a/public/themes/tekyla/stylesheets/screen.css
+++ b/public/themes/tekyla/stylesheets/screen.css
@@ -1,17 +1,17 @@
-@font-face { font-family: LiberationSans; src: url("../fonts/LiberationSans-Regular.ttf"); }
-@font-face { font-family: LiberationSans; src: url("../fonts/LiberationSans-Bold.ttf"); font-weight: bold; }
-@font-face { font-family: LiberationSans; src: url("../fonts/LiberationSans-Italic.ttf"); font-style: italic; }
-@font-face { font-family: LiberationSans; src: url("../fonts/LiberationSans-BoldItalic.ttf"); font-weight: bold; font-style: italic; }
-@font-face { font-family: LiberationMono; src: url("../fonts/LiberationMono-Regular.ttf"); }
-@font-face { font-family: LiberationMono; src: url("../fonts/LiberationMono-Bold.ttf"); font-weight: bold; }
-@font-face { font-family: LiberationMono; src: url("../fonts/LiberationMono-Italic.ttf"); font-style: italic; }
-@font-face { font-family: LiberationMono; src: url("../fonts/LiberationMono-BoldItalic.ttf"); font-weight: bold; font-style: italic; }
-@font-face { font-family: LiberationSerif; src: url("../fonts/LiberationSerif-Regular.ttf"); }
-@font-face { font-family: LiberationSerif; src: url("../fonts/LiberationSerif-Bold.ttf"); font-weight: bold; }
-@font-face { font-family: LiberationSerif; src: url("../fonts/LiberationSerif-Italic.ttf"); font-style: italic; }
-@font-face { font-family: LiberationSerif; src: url("../fonts/LiberationSerif-BoldItalic.ttf"); font-weight: bold; font-style: italic; }
+@font-face { font-family: "Liberation Sans"; src: url("../fonts/LiberationSans-Regular.ttf"); }
+@font-face { font-family: "Liberation Sans"; src: url("../fonts/LiberationSans-Bold.ttf"); font-weight: bold; }
+@font-face { font-family: "Liberation Sans"; src: url("../fonts/LiberationSans-Italic.ttf"); font-style: italic; }
+@font-face { font-family: "Liberation Sans"; src: url("../fonts/LiberationSans-BoldItalic.ttf"); font-weight: bold; font-style: italic; }
+@font-face { font-family: "Liberation Mono"; src: url("../fonts/LiberationMono-Regular.ttf"); }
+@font-face { font-family: "Liberation Mono"; src: url("../fonts/LiberationMono-Bold.ttf"); font-weight: bold; }
+@font-face { font-family: "Liberation Mono"; src: url("../fonts/LiberationMono-Italic.ttf"); font-style: italic; }
+@font-face { font-family: "Liberation Mono"; src: url("../fonts/LiberationMono-BoldItalic.ttf"); font-weight: bold; font-style: italic; }
+@font-face { font-family: "Liberation Serif"; src: url("../fonts/LiberationSerif-Regular.ttf"); }
+@font-face { font-family: "Liberation Serif"; src: url("../fonts/LiberationSerif-Bold.ttf"); font-weight: bold; }
+@font-face { font-family: "Liberation Serif"; src: url("../fonts/LiberationSerif-Italic.ttf"); font-style: italic; }
+@font-face { font-family: "Liberation Serif"; src: url("../fonts/LiberationSerif-BoldItalic.ttf"); font-weight: bold; font-style: italic; }
 
-* {margin:0; padding:0; font-family: LiberationSans, sans-serif;}
+* {margin:0; padding:0; font-family: "Liberation Sans", sans-serif;}
 html {background: #C9D7F1;}
 fieldset { border:1px solid #95b0e4; -moz-border-radius: 4px; padding:  8px 0px 0px; margin: 1px 1px 8px; background: url(../images/columns.png) repeat-x top; }
 fieldset legend { padding: 0 4px;  margin: 0 4px; color: #047; font-size: 15px; font-weight: bold;}
@@ -145,7 +145,7 @@ html[dir="rtl"] .help { float:left; margin-right: 8px; }
 .content h1 { font-size: 17px; margin: 0px 0px 16px; color: #750; font-weight:normal; color: #000}
 .content h2 { font-size: 15px; margin: 8px 0px 4px; border-left: 10px solid #543; padding: 0 0 0 4px; border-bottom: 1px dotted #543; color: #000}
 .content h3 { font-size: 13px; margin: 4px 0 2px 10px; border-left: 10px solid #B82; padding: 0 0 0 4px; border-bottom: 1px dotted #B82; font-weight: bold; color: #000 }
-.content pre { font-family: LiberationMono, monospace; color: #777; background: #FFF; padding: 8px; margin: 8px 0; }
+.content pre { font-family: "Liberation Mono", monospace; color: #777; background: #FFF; padding: 8px; margin: 8px 0; }
 .content ul { padding: 4px 2em; }
 .content ul li { list-style-type: square; }
 .content ol { padding: 4px 2em; }
@@ -259,7 +259,7 @@ table.quick td { padding: 0px 4px; }
 
 .evalue { border-collapse: collapse; border-bottom: 1px dotted #CCC; margin: 0px 4px; }
 .evalue .label, .evalue .value { padding:1px 4px;  vertical-align: middle; }
-.evalue .code { font-family: LiberationMono, monospace; }
+.evalue .code { font-family: "Liberation Mono", monospace; }
 .evalue .label { color: #777; }
 .evalue.verti td { width: 250px }
 .evalue.hori .label { width:176px;  }
@@ -321,7 +321,7 @@ table.formalize td .hint         { color: #600;  background:#FDE; padding:2px; }
 table.formalize td .hint span    { color: #B54; }
 table.formalize td .note         { color: #777; }
 table.formalize tr.title th { padding: 16px 8px 2px; border-bottom: 0px dotted #012; color: #012; font-size:13px; border-bottom: 1px solid #CCC; font-weight:bold; }
-table.formalize td.input .code { font-family: LiberationMono, monospace; }
+table.formalize td.input .code { font-family: "Liberation Mono", monospace; }
 a.act img { border: none !important; }
 /*
 table.formalize tr.odd  td { background: #E5ECF6; }
