Fixes the bug on price pretax_amount
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1702 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_purchase_order_line_form.html.haml
+++ b/app/views/management/_purchase_order_line_form.html.haml
@@ -6,7 +6,7 @@
   -#f.field :purchase_order_line, :unit_id, :choices=>[]
   -@price ||= @purchase_order_line.price
   -if @price
-    -f.field :price, :amount 
+    -f.field :price, :pretax_amount 
     -f.field :price, :tax_id ,:choices=>{:reflection=>:taxes}
   -if @current_company.warehouses.size > 1
     -f.field :purchase_order_line, :warehouse_id, :choices=>{:reflection=>:warehouses}
